# radar_basics

./: .gitignore  AGENTS.md  HUMAN.md  pyproject.toml
.agents/skills/repo-analysis/: SKILL.md
example_configs/: architecture.yaml
examples/: performance.yaml
ipynb_notebooks/: simulator_tutorial.ipynb
learning/: AGENTS.md  learn_coding_myself.ipynb  phased_array_radar_simulation_tutorial.ipynb
notebooks/: simulator_tutorial.ipynb
obsidian_notebook/: Untitled.md  obsidian cheat sheet.md  roadmap.md
obsidian_notebook/.trash/: knowledge_landscape.canvas
obsidian_notebook/AI_note/: dev_log.md
obsidian_notebook/_templates/: draw_template.md  learning_anything_template.md  read_paper_template.md
obsidian_notebook/phased array radar basics/: concept-detection and frame.md
obsidian_notebook/phased array radar knowledge base/: 0 phased array radar mental models.md  1 radar as RF semantic projection.md  2 why radar intuition matters.md  3 meaning frame and radar learning.md  4 dont understand knowledge feel it.md  5 geometry.md  6 tracking 2.md  6 tracking 3.md  6 tracking 4.md  6 tracking 5.md  6 tracking mental model summary.md  6 tracking.md  Untitled.md  knowledge_landscape.md
obsidian_notebook/programming/: data processing pipeline.md  repo analysis.md  software_architecture.md
src/radar_basics/: __init__.py  config.py  core.py  data.py  detection.py  display.py  experiment.py  geometry3d.py  processing.py  radar.py  scenario.py  scheduler.py  simulator.py  synthesis.py  tracking.py
tests/: test_config.py  test_geometry3d.py  test_simulator.py
(+1 files in other folders)
